--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   image_picker: ^1.0.7
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
