--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.0.7
   pin_code_fields: ^8.0.1
+  shared_preferences: ^2.2.2
  
 
 dev_dependencies:
