--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,12 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.0.7
   pin_code_fields: ^8.0.1
+  lottie: ^3.1.0
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # this is yihenew
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
