--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
   get: ^4.6.6
   flash: ^3.1.0
   google_fonts: ^6.2.1
@@ -42,10 +43,12 @@ dependencies:
   pin_code_fields: ^8.0.1
   lottie: ^3.1.0
   smooth_page_indicator: ^1.1.0
+  persistent_bottom_nav_bar: ^5.0.2
   shared_preferences: ^2.2.2
   dio: ^5.4.2
   get_storage:
   chapa_unofficial: ^0.0.5
+  animated_bottom_navigation_bar: ^1.3.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
