--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,12 @@ dependencies:
   dio: ^5.4.2
   get_storage:
   chapa_unofficial: ^0.0.5
-
+  
   carousel_slider: ^4.2.1
   percent_indicator: ^4.2.3
 
   animated_bottom_navigation_bar: ^1.3.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
