--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   flutter_dotenv: ^5.1.0
   infinite_scroll_pagination: ^4.0.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
