--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   infinite_scroll_pagination: ^4.0.0
   http: ^1.2.1
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
