--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
+  intl: 0.19.0
   get: ^4.6.6
   flash: ^3.1.0
   google_fonts: ^6.2.1
@@ -48,6 +48,8 @@ dependencies:
   dio: ^5.4.2
   get_storage:
   chapa_unofficial: ^0.0.5
+  syncfusion_flutter_gauges: ^26.1.40
+  web_socket_channel: ^3.0.0
   
   carousel_slider: ^4.2.1
   percent_indicator: ^4.2.3
